--- a/src/main/resources/templates/loadprofile.html
+++ b/src/main/resources/templates/loadprofile.html
@@ -1,15 +1,15 @@
-<!DOCTYPE HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <title></title>
     <meta name="generator" content="LibreOffice 6.4.7.2 (Linux)"/>
     <meta name="created" content="2022-08-17T10:10:20.102269736"/>
-    <meta name="changed" content="2022-08-17T10:15:01.232307708"/>
+    <meta name="changed" content="2022-08-18T19:57:02.073802532"/>
     <style type="text/css">
 		@page { size: 8.27in 11.69in; margin: 0.79in }
-		p { margin-bottom: 0.1in; line-height: 115%; background: transparent }
-		td p { background: transparent }
+		p { margin-bottom: 0.1in; background: transparent; line-height: 115%; background: transparent }
+		td p { background: transparent; background: transparent }
 		a:link { color: #000080; so-language: zxx; text-decoration: underline }
 		a:visited { color: #800000; so-language: zxx; text-decoration: underline }
 	</style>
@@ -49,7 +49,7 @@
     </tr>
     <tr valign="top">
         <td width="25%" style="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in"><p>
-            https://github.com/Gornostay-chik/JmeterSamplers/blob/main/json_obj.jmx</p>
+            <a href="https://raw.githubusercontent.com/Gornostay-chik/JmeterSamplers/main/json_obj.jmx">json_obj.jmx</a></p>
         </td>
         <td width="25%" style="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0in; padding-right: 0in"><p>
             <br/>
@@ -65,7 +65,7 @@
     </tr>
     <tr valign="top">
         <td width="25%" style="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in"><p>
-            https://github.com/Gornostay-chik/JmeterSamplers/blob/main/json_str.jmx</p>
+            <a href="https://raw.githubusercontent.com/Gornostay-chik/JmeterSamplers/main/json_str.jmx">json_str.jmx</a></p>
         </td>
         <td width="25%" style="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0in; padding-right: 0in"><p>
             <br/>
